--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\marcc\\AppData\\Roaming\\NetBeans\\17\\config\\GlassFishEE6\\Properties\\gfv31593968349.properties
+deploy.ant.properties.file=C:\\Users\\blasi\\AppData\\Roaming\\NetBeans\\15\\config\\GlassFishEE6\\Properties\\gfv31026521710.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/marcc/GlassFish_Server/glassfish/domains/domain1
-j2ee.server.home=C:/Users/marcc/GlassFish_Server/glassfish
-j2ee.server.instance=[C:\\Users\\marcc\\GlassFish_Server\\glassfish;C:\\Users\\marcc\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv4ee7:localhost:4848
-j2ee.server.middleware=C:/Users/marcc/GlassFish_Server
-user.properties.file=C:\\Users\\marcc\\AppData\\Roaming\\NetBeans\\17\\build.properties
+j2ee.server.domain=C:/Users/blasi/GlassFish_Server/glassfish/domains/domain1
+j2ee.server.home=C:/Users/blasi/GlassFish_Server/glassfish
+j2ee.server.instance=[C:\\Users\\blasi\\GlassFish_Server\\glassfish;C:\\Users\\blasi\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv4ee7:localhost:4848
+j2ee.server.middleware=C:/Users/blasi/GlassFish_Server
+user.properties.file=C:\\Users\\blasi\\AppData\\Roaming\\NetBeans\\15\\build.properties
